# ProyectoCompiladores

./: .gitignore  CMakeLists.txt  Lexer.hpp  Music.hpp  Parser.hpp  Token.hpp  generator.py  gravity.mid  implementacion.cpp  lexer.cpp  main.cpp
include/: Checker.hpp  Lexer.hpp  Music.hpp  Parser.hpp
resources/: bells.txt  birthday.txt  blue.txt  musica.txt  twinkle.txt
src/: Checker.cpp  Lexer.cpp  Music.cpp  Parser.cpp
